k8s/frontend-k8s-Ingress-Resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    appprotect.f5.com/app-protect-policy: "hello/fch-policy"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "hello/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.240.1.44:514"
#    appprotect.f5.com/app-protect-security-log-destination: 'syslog:server="nap2azurela.logging.svc.cluster.local":5514'
spec:
  rules:
  - host: hw1.f5demo.fch
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: hw2.f5demo.fch
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
